2015-04-02  Andy Buckley  <andy.buckley@cern.ch>

	* IO_GenEvent.cc: Remove unnecessary copying of the *whole*
	GenEvent during write, since a reference is just fine!

2015-03-27  Andy Buckley  <andy.buckley@cern.ch>

	* Adding forward compatibility typedefs GenEventPtr, GenParticlePtr and GenVertexPtr.

	* Providing HEPMC_VERSION_CODE integer macro for preprocessed version requirements.

	* Adding HEPMC_HAS_CONSISTENT_CONST and HEPMC_HAS_SIMPLE_RANGE macros.

2015-02-15  Andy Buckley  <andy.buckley@cern.ch>

	* Make GenVertex::status() the canonical form, with id() as the alias.

	* HEPMC_HAS_NAMED_WEIGHTS #define changed from implicit value 1 to
	explict value 2, to allow detection of new capabilities.

2015-01-26  Andy Buckley  <andy.buckley@cern.ch>

	* Adding forward-compatibility GenWeights, GenPdfInfo, and GenHeavyIon typedef aliases.

	* Restructuring WeightContainer to work as intended -- weight names are now queryable.

2014-11-25  Andy Buckley  <andy.buckley@cern.ch>

	* Improving IO_AsciiParticles usability -- can now write to non-file streams.

	* Providing children() / parents() functions on GenVertex and GenParticle.

	* Providing preferred upper-case versions of IteratorRange enum values.

	* Add status() and set_status() aliases for Vertex::[set_]id().

	* Add rapidity and abs eta/rap methods to FourVector.

	* More constness improvements (hacked implementation, but improves API).

	* Add abs_pdg_id(), pid() and abspid() methods to GenParticle.

	* Allow CMake in-tree builds.

	* Add user-convenience HepMC/HepMC.h header.

2013-11-17  Andy Buckley  <andy.buckley@cern.ch>

	* Added more iterator access methods on GenVertex.

	* Adding vertices() and particles() aliases on GenEvent.

	* GenRanges clean-up and auto-including at the foot of GenEvent.h

	* Lots of "proper" inlining and noting bugs and TODOs.

2013-11-16  Andy Buckley  <andy.buckley@cern.ch>

	* Merging in code tiding changes from hg branch.

2013-10-16 Witek Pokorski
